Update sample application to use TabLayout and verify #1

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.booking.rtlviewpager.sample">
 
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="RtlViewPager Sample"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:theme="@style/Base.Theme.AppCompat"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name="com.booking.rtlviewpager.sample.SampleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
