--- a/rtlviewpager/build.gradle
+++ b/rtlviewpager/build.gradle
@@ -25,15 +25,16 @@ ext {
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.1'
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 23
+        minSdkVersion 9
+        targetSdkVersion 25
         versionCode 2
         versionName "1.0.1"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -43,8 +44,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.android.support:support-annotations:23.1.1'
+    compile "com.android.support:support-v4:${support_version}"
+    compile "com.android.support:support-annotations:${support_version}"
 }
 
 
