--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.1"
 
     defaultConfig {
         applicationId "com.booking.rtlviewpager.sample"
-        minSdkVersion 15
-        targetSdkVersion 23
+        minSdkVersion 9
+        targetSdkVersion 25
         versionCode 2
         versionName "1.0.1"
     }
@@ -21,6 +21,6 @@ android {
 
 dependencies {
     compile project(':rtlviewpager')
-    compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile "com.android.support:support-v4:${support_version}"
+    compile "com.android.support:design:${support_version}"
 }
