Change package name, credentials, and polish .gradle files.

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.booking.rtlviewpager.sample">
+    package="com.yotadevices.rtlviewpager.sample">
 
     <application
         android:allowBackup="false"
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.AppCompat"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.booking.rtlviewpager.sample.SampleActivity">
+        <activity android:name=".SampleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
