--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext {
-        support_version = "25.3.1"
-    }
     repositories {
         jcenter()
     }
@@ -20,6 +17,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+    }
+    ext {
+        supportVersion = "25.3.1"
+        majorVersion = 1
+        minorVersion = "0.1"
     }
 }
 
