--- a/rtlviewpager/build.gradle
+++ b/rtlviewpager/build.gradle
@@ -1,27 +1,28 @@
 apply plugin: 'com.android.library'
 
 ext {
-    bintrayRepo = 'maven'
-    bintrayName = 'RtlViewPager'
+    bintrayRepo         = 'maven'
+    bintrayName         = 'RtlViewPager'
 
-    publishedGroupId = 'com.booking'
-    libraryName = 'rtlviewpager'
-    artifact = 'rtlviewpager'
+    publishedGroupId    = 'com.yotadevices.widget'
+    libraryName         = 'rtlviewpager'
+    artifact            = 'rtlviewpager'
 
-    libraryDescription = 'ViewPager that displays items from right to left for RTL locales and behaves like a regular ViewPager otherwise'
+    libraryDescription  = '''Fork of the RtlViewPager.
+            ViewPager that displays items from right to left for RTL locales and behaves like a regular ViewPager otherwise'''
 
-    siteUrl = 'https://github.com/diego-gomez-olvera/RtlViewPager'
-    gitUrl = 'https://github.com/diego-gomez-olvera/RtlViewPager.git'
+    siteUrl             = 'https://github.com/yotadevices/RtlViewPager'
+    gitUrl              = 'https://github.com/yotadevices/RtlViewPager.git'
 
-    libraryVersion = '1.0.1'
+    libraryVersion      = "${majorVersion}.${minorVersion}"
 
-    developerId = 'diego-gomez-olvera'
-    developerName = 'Diego Gómez Olvera'
-    developerEmail = 'diego.gomez.olvera@gmail.com'
+    developerId         = "dmitvitalii"
+    developerName       = "Vitalii Dmitriev"
+    developerEmail      = "dmit.vitalii@gmail.com"
 
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
+    licenseName         = 'The Apache Software License, Version 2.0'
+    licenseUrl          = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses         = ["Apache-2.0"]
 }
 
 android {
@@ -31,8 +32,8 @@ android {
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 25
-        versionCode 2
-        versionName "1.0.1"
+        versionCode majorVersion
+        versionName "${majorVersion}.${minorVersion}"
     }
 
     buildTypes {
@@ -44,10 +45,9 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:support-v4:${support_version}"
-    compile "com.android.support:support-annotations:${support_version}"
+    compile "com.android.support:support-v4:${supportVersion}"
+    compile "com.android.support:support-annotations:${supportVersion}"
 }
-
 
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
