--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "25.0.1"
 
     defaultConfig {
-        applicationId "com.booking.rtlviewpager.sample"
+        applicationId "com.yotadevices.rtlviewpager.sample"
         minSdkVersion 9
         targetSdkVersion 25
-        versionCode 2
-        versionName "1.0.1"
+        versionCode majorVersion
+        versionName "${majorVersion}.${minorVersion}"
     }
     buildTypes {
         release {
@@ -21,6 +21,6 @@ android {
 
 dependencies {
     compile project(':rtlviewpager')
-    compile "com.android.support:support-v4:${support_version}"
-    compile "com.android.support:design:${support_version}"
+    compile "com.android.support:support-v4:${supportVersion}"
+    compile "com.android.support:design:${supportVersion}"
 }
