--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="RtlViewPager Sample"
         android:supportsRtl="true"
-        android:theme="@style/Base.Theme.AppCompat"
+        android:theme="@style/Theme.AppCompat.Light"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".SampleActivity">
             <intent-filter>
