--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -17,13 +17,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion targetSdk
     buildToolsVersion "25.0.1"
 
     defaultConfig {
         applicationId "com.yotadevices.rtlviewpager.sample"
-        minSdkVersion 9
-        targetSdkVersion 25
+        minSdkVersion minSdk
+        targetSdkVersion targetSdk
         versionCode majorVersion
         versionName "${majorVersion}.${minorVersion}"
     }
