--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ allprojects {
         supportVersion = "25.3.1"
         majorVersion = 1
         minorVersion = "0.4"
+        minSdk = 13
+        targetSdk = 25
     }
 }
 
